# dual-button-doorbell

./: #auto_saved_files#  .gitignore  README.md  board_outline.dxf  door_bell.kicad_pcb  door_bell.kicad_prl  door_bell.kicad_pro  door_bell.kicad_sch
bom/: door_bell.csv  door_bell.xlsx
esp32-pad-config/: wrover-pads.md
firmware/: firmware.code-workspace
firmware/dual-button-doorbell/: .gitignore  CMakeLists.txt  partitions.csv  reload.sh  sdkconfig
firmware/dual-button-doorbell/main/: CMakeLists.txt  application.cpp  application.hpp  dummy_sound.h  init.c  init.h  io.h  main.c  main.cpp
firmware/dual-button-doorbell/main/ccronexpr/: ___ccronexpr.c  ccronexpr.h
firmware/dual-button-doorbell/main/components/: button.cpp  button.hpp  cron.cpp  cron.hpp  http_context_config.cpp  http_context_config.hpp  http_server.cpp  http_server.hpp  i_file_io.hpp  led.cpp  led.hpp  logger.cpp  logger.hpp  mqtt.cpp  mqtt.hpp  ntp.cpp  ntp.hpp  relay.cpp  relay.hpp  rtc.cpp  rtc.hpp  sdcard.cpp  sdcard.hpp  settings_file.cpp  settings_file.hpp  sound.cpp  sound.hpp  wifi.cpp  wifi.hpp
firmware/dual-button-doorbell/main/components/event/: event_dispatcher.cpp  event_dispatcher.hpp  i_event_dispatcher.hpp
firmware/dual-button-doorbell/main/utilities/: string_format.hpp  urldecode.cpp  urldecode.hpp
firmware/dual-button-doorbell/sdcard/: README.md  crontab.txt  setting.jsn
frontpanel_enclosure/: frontpanel_enclosure.FCStd  frontpanel_enclosure.FCStd1  frontpanel_enclosure.step  frontpanel_enclosure.stl
gerber/: door_bell-B_Cu.gbr  door_bell-B_Mask.gbr  door_bell-B_Silkscreen.gbr  door_bell-Edge_Cuts.gbr  door_bell-F_Cu.gbr  door_bell-F_Mask.gbr  door_bell-F_Silkscreen.gbr  door_bell-In1_Cu.gbr  door_bell-In2_Cu.gbr  door_bell-NPTH.drl  door_bell-PTH.drl  door_bell-job.gbrjob
gfx/: button_panel_enclosure.ast  espena_logo.dxf
