idf_component_register( SRCS "main.cpp" 
                             "application.cpp"
                             "components/settings_file.cpp"
                             "components/led.cpp"
                             "components/relay.cpp"
                             "components/sound.cpp"
                             "components/sdcard.cpp"
                             "components/rtc.cpp"
                             "components/button.cpp"
                             "components/wifi.cpp"
                             "components/event/event_dispatcher.cpp"
                        INCLUDE_DIRS "." )
