idf_component_register( SRCS "main.cpp" 
                             "application.cpp"
                             "components/settings_file.cpp"
                             "components/led.cpp"
                             "components/relay.cpp"
                             "components/sound.cpp"
                             "components/sdcard.cpp"
                             "components/rtc.cpp"
                             "components/ntp.cpp"
                             "components/button.cpp"
                             "components/wifi.cpp"
                             "components/cron.cpp"
                             "components/event/event_dispatcher.cpp"
                             "ccronexpr/ccronexpr.c"
                        INCLUDE_DIRS "." )
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -DCRON_USE_LOCAL_TIME")